# aws-mfa-session

./: Cargo.toml  README.md
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  clippy.yml  coverage.yml  release.yml  rust.yml
src/: args.rs  credentials.rs  error.rs  lib.rs  main.rs  profile.rs  shell.rs
tests/: integration_tests.rs
