[package]
name = "aws-mfa-session"
version = "0.2.4"
authors = ["Andrii Radyk <ander.ender@gmail.com>"]
description = """
A command line utility to generate temporary AWS credentials with virtual MFA device. Credentials could be exported into new shell or inserted into aws credentials file.
"""
documentation = "https://github.com/AnderEnder/aws-mfa-session"
homepage = "https://github.com/AnderEnder/aws-mfa-session"
repository = "https://github.com/AnderEnder/aws-mfa-session"
readme = "README.md"
keywords = [
    "aws",
    "sts",
    "token",
    "credentials",
]
categories = ["command-line-utilities"]
exclude = [
    ".github/*",
]
edition = "2018"
license = "MIT"

[dependencies]
structopt = "0.3"
dirs = "4"
tokio = { version = "1", features=["macros", "rt-multi-thread"] }
regex = "1"
aws-types = "0.4"
aws-config = "0.6"
aws-sdk-iam = "0.8"
aws-sdk-sts = "0.4"

[profile.release]
lto = "fat"
codegen-units = 1
