[package]
name = "aws-mfa-session"
version = "0.3.1"
authors = ["Andrii Radyk <ander.ender@gmail.com>"]
description = """
A command line utility to generate temporary AWS credentials with virtual MFA device. Credentials could be exported into new shell or inserted into aws credentials file.
"""
documentation = "https://github.com/AnderEnder/aws-mfa-session"
homepage = "https://github.com/AnderEnder/aws-mfa-session"
repository = "https://github.com/AnderEnder/aws-mfa-session"
readme = "README.md"
keywords = ["aws", "sts", "token", "credentials"]
categories = ["command-line-utilities"]
exclude = [".github/*"]
edition = "2024"
license = "MIT"

[dependencies]
dirs = "6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
regex = "1"
aws-types = "1"
aws-config = "1"
aws-sdk-iam = "1"
aws-sdk-sts = "1"
clap = { version = "4.5", features = ["derive"] }
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
dialoguer = "0.11.0"

[profile.dev]
debug = false

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
