[package]
name = "aws-mfa-session"
version = "0.4.3"
authors = ["Andrii Radyk <ander.ender@gmail.com>"]
description = """
A command line utility to generate temporary AWS credentials with virtual MFA device. Credentials could be exported into new shell or inserted into aws credentials file.
"""
documentation = "https://github.com/AnderEnder/aws-mfa-session"
homepage = "https://github.com/AnderEnder/aws-mfa-session"
repository = "https://github.com/AnderEnder/aws-mfa-session"
readme = "README.md"
keywords = ["aws", "sts", "token", "credentials"]
categories = ["command-line-utilities"]
exclude = [".github/*"]
edition = "2024"
# Minimum supported Rust version. The floor is driven by the aws-config /
# aws-sdk-* family, which currently declare rust-version = 1.91.1 (well above the
# edition-2024 minimum of 1.85). Bump when those dependencies raise their MSRV;
# the `msrv` CI job verifies this value still builds.
rust-version = "1.91.1"
license = "MIT"

[dependencies]
dirs = "6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
aws-types = "1"
aws-config = "1"
aws-sdk-iam = "1"
aws-sdk-sts = "1"
clap = { version = "4.6", features = ["derive"] }
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
dialoguer = "0.12.0"
rust-ini = "0.21"

[dev-dependencies]
serial_test = "3.4"

[profile.dev]
debug = false

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
